--- a/client/src/components/Card/Card.module.scss
+++ b/client/src/components/Card/Card.module.scss
@@ -1,57 +1,68 @@
 .card {
-    margin: 0 auto;
-    /* border: 1px solid #ccc; */
-    border-radius: 5px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 30px;
+  width: 90%;
+  position: relative;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  cursor: pointer;
+  gap: 10px;
 
-    width: 70%;
-    position: relative;
-    display: flex;
-    /* flex-direction: column; */
-    align-items: center;
-    cursor: pointer;
-    gap: 10px;
+
+  -webkit-box-shadow: 0px 0px 11px 10px rgba(0,0,0,0.73);
+  -moz-box-shadow: 0px 0px 11px 10px rgba(0,0,0,0.73);
+  box-shadow: 0px 0px 11px 10px rgba(0,0,0,0.73);
+}
+
+.card:hover{
+    background-color: rgb(248, 243, 243);
 }
 
 .card img {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    margin-bottom: 10px;
+  width:100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 10px;
 }
-.cards-items{
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
+.cards-items {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 .card h3 {
-    margin: 0 0 10px;
-    text-align: center;
+  margin: 0 0 10px;
+  text-align: center;
+  color: aquamarine;
 }
 
 .card p {
-    color: aliceblue;
-    margin: 5px 0;
-    text-align: center;
+  color: rgb(91, 176, 250);
+  margin: 5px 0;
+  text-align: center;
 }
-.user-name{
-    margin-right: 10px;
+.user-name {
+  margin-right: 10px;
 }
-.user-name::after{
-    content: url("1.png");
+.user-name::after {
+  content: url("1.png");
 
-width: 20px;
-height: 30px;
+  width: 20px;
+  height: 30px;
 
-    /* top: 0;
+  /* top: 0;
     right: 0px; 
     position:absolute; */
 }
 
 .delete-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    color: red;
-    font-size: 18px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  color: red;
+  font-size: 18px;
 }
