--- a/client/src/components/RightSidebar/RightSidebar.module.scss
+++ b/client/src/components/RightSidebar/RightSidebar.module.scss
@@ -1,21 +1,21 @@
-@import '../../App.scss';
+// @import '../../App.scss';
 
-// .rightSidebar {
-//   width: 20%;
-//   background-color: #5a3434;
-//   padding: 20px;
-//   border-right: 1px solid #ccc;
-// }
+// // .rightSidebar {
+// //   width: 20%;
+// //   background-color: #5a3434;
+// //   padding: 20px;
+// //   border-right: 1px solid #ccc;
+// // }
 
-// .rightSidebar ul {
-//   list-style-type: none;
-// }
+// // .rightSidebar ul {
+// //   list-style-type: none;
+// // }
 
-// .rightSidebar ul li {
-//   padding: 10px 0;
-//   cursor: pointer;
-// }
+// // .rightSidebar ul li {
+// //   padding: 10px 0;
+// //   cursor: pointer;
+// // }
 
-// .rightSidebar ul li:hover {
-//   background-color: #f0f0f0;
-// }
+// // .rightSidebar ul li:hover {
+// //   background-color: #f0f0f0;
+// // }
