--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -1,48 +1,48 @@
-@import '../../App.scss';
+// @import '../../App.scss';
 
-.footer {
-    background-color: $primary-color;
-    color: $seventh-color;
-    padding: $padding-large;
-    text-align: center;
-    font-family: $primary-font;
-    border-top: 1px solid $border-color;
+// .footer {
+//     background-color: $primary-color;
+//     color: $seventh-color;
+//     padding: $padding-large;
+//     text-align: center;
+//     font-family: $primary-font;
+//     border-top: 1px solid $border-color;
   
-    &__content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: $padding-medium;
+//     &__content {
+//       display: flex;
+//       flex-direction: column;
+//       align-items: center;
+//       padding: $padding-medium;
   
-      p {
-        margin: 0;
-        font-size: $font-size-medium;
-      }
-    }
+//       p {
+//         margin: 0;
+//         font-size: $font-size-medium;
+//       }
+//     }
   
-    &__nav {
-      margin-top: $margin-medium;
+//     &__nav {
+//       margin-top: $margin-medium;
   
-      ul {
-        list-style: none;
-        padding: 0;
-        display: flex;
-        gap: $padding-large;
+//       ul {
+//         list-style: none;
+//         padding: 0;
+//         display: flex;
+//         gap: $padding-large;
   
-        li {
-          a {
-            text-decoration: none;
-            color: $seventh-color;
-            font-size: $font-size-small;
-            font-weight: bold;
-            transition: color 0.3s ease;
+//         li {
+//           a {
+//             text-decoration: none;
+//             color: $seventh-color;
+//             font-size: $font-size-small;
+//             font-weight: bold;
+//             transition: color 0.3s ease;
   
-            &:hover {
-              color: $hover-color;
-            }
-          }
-        }
-      }
-    }
-  }
+//             &:hover {
+//               color: $hover-color;
+//             }
+//           }
+//         }
+//       }
+//     }
+//   }
   
