--- a/client/src/pages/FriendsPage/FriendsPage.module.scss
+++ b/client/src/pages/FriendsPage/FriendsPage.module.scss
@@ -1,17 +1,17 @@
-@import '../../App.scss';
+// @import '../../App.scss';
 
-// .friends__box{
-// position: relative;
-// background-color: aqua;
-// min-height: 100vh;
-// position: relative;
-// padding: 100px 40px;
-// margin: 0 auto;
-//     h1 {
+// // .friends__box{
+// // position: relative;
+// // background-color: aqua;
+// // min-height: 100vh;
+// // position: relative;
+// // padding: 100px 40px;
+// // margin: 0 auto;
+// //     h1 {
 
 
-//     text-align: center; 
-//     font-size: 20px;
-// }
-// }
+// //     text-align: center; 
+// //     font-size: 20px;
+// // }
+// // }
 
