--- a/client/src/components/Card/Card.module.scss
+++ b/client/src/components/Card/Card.module.scss
@@ -1,28 +1,29 @@
-// .card {
-//     margin: 0 auto;
-//     /* border: 1px solid #ccc; */
-//     border-radius: 5px;
+.card {
+    // margin: 0 auto;
+    margin-bottom: 10px;
+    border: 1px solid #313030; 
+    border-radius: 5px;
 
-//     width: 70%;
-//     position: relative;
-//     display: flex;
-//     /* flex-direction: column; */
-//     align-items: center;
-//     cursor: pointer;
-//     gap: 10px;
-// }
+    width: 100%;
+    position: relative;
+    display: flex;
+    // flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    // gap: 20px;
+}
 
-// .card img {
-//     width: 70px;
-//     height: 70px;
-//     border-radius: 50%;
-//     margin-bottom: 10px;
-// }
-// .cards-items{
-//     padding: 10px;
-//     display: flex;
-//     flex-direction: column;
-// }
+.card img {
+    width: 150px;
+    height: 150px;
+    // border-radius: 50%;
+    // margin-bottom: 10px;
+}
+.cards-items{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
 // .card h3 {
 //     margin: 0 0 10px;
 //     text-align: center;
