--- a/client/src/components/RightSidebar/RightSidebar.module.scss
+++ b/client/src/components/RightSidebar/RightSidebar.module.scss
@@ -1,4 +1,30 @@
-// @import '../../App.scss';
+@import '../../App.scss';
+
+.mainMenu {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    width: 10%;
+    height: 100vh;
+    padding-top: 20px;
+    background-color: $nodle-black-800;
+    border-radius: 10px;
+    border: 1px solid $nodle-black-500;
+    
+    position: fixed;  
+    top: 170px;
+    right: -150px;
+    transition: 1.5s;
+      
+    li {
+      margin-bottom: 10px;
+    }
+  
+  }
+  
+  .mainMenu:hover{
+    right: 0;
+  }
 
 // // .rightSidebar {
 // //   width: 20%;
