--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -1,5 +1,44 @@
 @import '../../App.scss';
 
+.mainContent {
+  padding: 20px;
+  background-color: #f9f9f9;
+}
+
+.article {
+  margin-bottom: 20px;
+  padding: 15px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.articleTitle {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #2a9d8f;
+}
+
+.articleSnippet {
+  font-size: 16px;
+  color: #555555;
+  margin-bottom: 15px;
+}
+
+.articleContent {
+  font-size: 16px;
+  color: #333333;
+  margin-bottom: 10px;
+}
+
+.articleDate {
+  font-size: 14px;
+  color: #888888;
+  text-align: right;
+}
+
+
 // * {
 //     margin: 0;
 //     padding: 0;
