--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -39,6 +39,8 @@ $background-button: linear-gradient(145deg, rgba(225, 215, 237, 0.16) 0%, rgba(2
 $glass-stroke: rgba(255, 255, 255, 0.08);
 $glass-modal: rgba(26, 29, 33, 0.96);
 
+$nodle-black-green:#2a9d8f;
+
 $font-size-title: 34px;
 
 $font-weight-black: 900; // h1 //
