--- a/client/src/components/MainContent/MainContent.module.scss
+++ b/client/src/components/MainContent/MainContent.module.scss
@@ -19,4 +19,10 @@
     padding: 10px;
     color: white;
   }
-  
+
+  .mainFeed {
+    position: fixed;
+    width: 71%;
+    top: 170px;
+    right: 11%;
+  }
