--- a/client/src/components/Card/Card.module.scss
+++ b/client/src/components/Card/Card.module.scss
@@ -1,3 +1,5 @@
+@import '../../App.scss';
+
 .card {
     // margin: 0 auto;
     margin-bottom: 10px;
@@ -24,35 +26,41 @@
     display: flex;
     flex-direction: column;
 }
-// .card h3 {
-//     margin: 0 0 10px;
-//     text-align: center;
-// }
 
-// .card p {
-//     color: aliceblue;
-//     margin: 5px 0;
-//     text-align: center;
-// }
-// .user-name{
-//     margin-right: 10px;
-// }
-// .user-name::after{
-//     content: url("1.png");
+.card h3 {
+    color: #CDCECF;
+    margin: 0 0 10px;
+    text-align: center;
+    font-size: $font-size-medium;
+}
 
-// width: 20px;
-// height: 30px;
+.card p {
+    color: aliceblue;
+    margin: 5px 0;
+    text-align: center;
+}
+.user-name{
+    margin-right: 10px;
+    color: $nodle-black-green;
+    font-size: $font-size-large;
+}
 
-//     /* top: 0;
-//     right: 0px; 
-//     position:absolute; */
-// }
+.user-name::after{
+    content: url("1.png");
 
-// .delete-btn {
-//     position: absolute;
-//     top: 10px;
-//     right: 10px;
-//     cursor: pointer;
-//     color: red;
-//     font-size: 18px;
-// }
+width: 20px;
+height: 30px;
+
+    /* top: 0;
+    right: 0px; 
+    position:absolute; */
+}
+
+.delete-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    color: red;
+    font-size: 18px;
+}
