--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -1,10 +1,13 @@
-@import '../../App.scss';
+@import "../../App.scss";
 
-
-header { 
+header {
   padding: 20px;
   background-color: $nodle-black-800;
   border-radius: 10px;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  width: 82%;
   h1 {
     color: $nodle-black-0;
     font-size: $font-size-title;
@@ -15,133 +18,60 @@ header {
     text-decoration: none;
   }
 
+  // a:hover {
+  //   width: 30px;
+  //   background-color: green;
+  //   height: 2px;
+  // }
 
-.headerTop {
-  padding: 20px;
-  box-sizing: border-box;
-  border-bottom: 1px solid $nodle-black-700;
+  // li:hover {
+  //   // position: fixed;
+  //   width: 10px;
+  //   height: 1px;
+  //   border-bottom: 1px solid green;
+  // }
+
+  .headerNav li {
+    position: relative;
+  }
+
+  .headerNav li::after {
+    content: "";
+    position: absolute;
+    left: -10px;
+    bottom: -19px; /* Положение полоски */
+    width: 50px;
+    height: 3px; /* Высота полоски */
+    background-color: green; /* По умолчанию полоска прозрачная */
+    transition: background-color 0.3s ease;
+  }
+
+  .headerNav li .active::after {
+    background-color: green; /* Цвет полоски для активного элемента */
+  }
+
+  .headerTop {
+    padding: 20px;
+    box-sizing: border-box;
+    border-bottom: 1px solid $nodle-black-700;
+  }
+
+  .headerBottom {
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
+  .headerNav {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  // header a:hover {
+  //   position: fixed;
+  //   top: 10px;
+  //   right: 0;
+  //   width: 30px;
+  //   background-color: green;
+  //   height: 2px;
+  // }
 }
-
-.headerBottom {
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-.headerNav {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-}
-
-
-
-
-
-
-
-// ____________________________________________\\
-
-
-
-
-
-
-
-// // :root {
-// //   // background-color: rgb(230, 231, 228);
-// //   background-color: $primary-color;
-// // }
-
-// header {
-//   display: flex;
-//   // justify-content: center;
-//   // align-items: center;
-//   box-sizing: border-box;
-//   padding: 0 32px;
-//   background: #eff1f1;
-//   width: 100%;
-//   height: 80px;
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   z-index: 1;
-
-//   nav {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-around;
-
-//   }
-
-//   ul {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     gap: 10px;
-//     list-style: none;
-//     margin: 0;
-//     padding: 30px;
-//   }
-
-//   a {
-//     color: black;
-//     font-size: 22px;
-//     font-weight: 600;
-//     text-decoration: none;
-    
-
-//     &.active {
-//       color: gray;
-//     }
-
-//     &.active .icon {
-//       filter: invert(60%) sepia(100%) saturate(0%) brightness(100%)
-//         contrast(100%);
-//     }
-
-//     &.active .counter {
-//       color: gray;
-//     }
-//   }
-
-//   .counter {
-//     color: #fff;
-//   }
-// }
-
-// .icon {
-//   width: 24px;
-//   height: 24px;
-// }
-
-// .dropdownToggle {
-//   background: none;
-//   border: none;
-//   cursor: pointer;
-//   display: inline-flex;
-//   align-items: center;
-//   justify-content: center;
-//   padding: 0;
-// }
-
-// .dropdownMenu {
-//   position: absolute;
-//   background-color: white;
-//   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-//   padding: 10px 0;
-//   margin-top: 10px;
-//   list-style-type: none;
-//   width: 150px;
-//   border-radius: 4px;
-// }
-
-// .dropdownMenu li {
-//   padding: 8px 16px;
-// }
-
-// .dropdownMenu li:hover {
-//   background-color: #f1f1f1;
-// }
-
-
