--- a/client/src/components/LeftSidebar/LeftSidebar.module.scss
+++ b/client/src/components/LeftSidebar/LeftSidebar.module.scss
@@ -1,24 +1,28 @@
 @import '../../App.scss';
 
 .menu {
-    width: 20%;
-    height: 100vh;
+    width: 17%;
+    height: 98%;
     background-color: $nodle-black-800;
     border-radius: 10px;
-    position: relative;
-  
+    position: fixed;
+    top: 10px;
+    left: 0;
+
     .exit {
       position: absolute;
       bottom: 30px;
+      width: 80%;
       left: 30px;
       padding: 10px;
       border-radius: 10px;
+      background: rgb(30,29,32);
       background-color: $background-button;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      gap: 80px;
-  
+      gap: 10px;
+    
       .exitBlock {
         display: flex;
         gap: 20px;
@@ -29,27 +33,63 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        color: #B6F09C;
+        line-height: 25px;
+      }
+
+      .exitBlockImg {
+        border-radius: 50%;
       }
     }
+    
+    .iconWrapper {
+      background: rgb(30,29,32);
+      background-color: $background-button;
+      position: absolute;
+      top: 30px;
+      width: 80%;
+      left: 30px;
+      padding: 10px;
+      border-radius: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .iconWrapper img {
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    .menuForm {
+      padding: 20px 10px;
+      background: rgb(30,29,32);
+      background-color: $background-button;
+      width: 80%;
+      margin-top: 180px;
+      margin-left: 30px;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+    }
+
+    .menuForm input {
+      padding: 25px 10px;
+    }
+
+    .menuForm button {
+      background-color: $nodle-black-300;
+      color: $border-color-green;
+      border-radius: 5px;
+      padding: 5px;
+    }
+
+    a {
+      cursor: pointer;
+    }
   }
-  
-
-// // .leftSidebar{
-// //   width: 20%;
-// //   background-color: #d92727;
-// //   padding: 20px;
-// //   border-right: 1px solid #ccc;
-// // }
-
-// // .leftSidebar ul{
-// //   list-style-type: none;
-// // }
-
-// // .leftSidebar ul li {
-// //   padding: 10px 0;
-// //   cursor: pointer;
-// // }
-
-// // .leftSidebar ul li:hover {
-// //   background-color: #f0f0f0;
-// // }
