--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -122,7 +122,7 @@ $large-screen-breakpoint: 1440px;
 .main-container {
   display: flex;
   gap: 10px;
-  height: 100vh;
+  // height: 100vh;
   width: 100%;
   border-radius: 10px;
 }
@@ -146,7 +146,7 @@ body {
   // padding: 0;
   display: flex;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
   color: white;
   background-color: $nodle-black-700;
   // width: 100vh;
