--- a/client/src/pages/GroupPage/GroupPage.module.scss
+++ b/client/src/pages/GroupPage/GroupPage.module.scss
@@ -1,16 +1,53 @@
-@import '../../App.scss';
+@import "../../App.scss";
 
+.groupContainer {
+  background: rgb(62, 62, 65);
+  background: linear-gradient(
+    90deg,
+    rgba(62, 62, 65, 1) 0%,
+    rgba(32, 32, 60, 1) 35%,
+    rgba(0, 15, 18, 1) 100%
+  );
+  border-radius: 10px;
+  padding: 20px 10px;
+  height: 100%;
 
-.group__box{
+  .groupHeader {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+  }
 
-    background-color: rgb(191, 86, 218);
-min-height: 100vh;
-position: relative;
-padding: 100px 40px;
-    h1 {
+  .groupMain li {
+    display: none; /* Сховати всі елементи за замовчуванням */
+  }
 
+  .groupMain li.active {
+    display: block; /* Показати лише активний елемент */
+  }
 
-    text-align: center; 
-    font-size: 20px;
-}
+  .groupMain li.hidden {
+    display: none; /* Приховані елементи */
+  }
+
+  .contentItem {
+    padding: 20px;
+    border: 1px solid #ddd;
+  }
+  
+  .contentItem img {
+    width: 50%;
+    height: auto;
+    margin-bottom: 15px;
+  }
+  
+  .contentItem h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .contentItem p {
+    font-size: 16px;
+    margin-bottom: 8px;
+  }
 }
